<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_beranda"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_transaksi"
            android:icon="@drawable/nav_transaksi"
            android:title="@string/menu_transaksi" />
        <item
            android:id="@+id/nav_riwayat"
            android:icon="@drawable/nav_riwayat"
            android:title="@string/menu_riwayat" />
        <item
            android:id="@+id/nav_grafik"
            android:icon="@drawable/nav_laporan"
            android:title="@string/menu_grafik" />

        <item
            android:id="@+id/nav_laporan"
            android:icon="@drawable/nav_laporan"
            android:title="@string/menu_laporan" />
    </group>
    <group>
        <item
        android:id="@+id/nav_pengaturan"
        android:icon="@drawable/nav_pengaturan"
        android:title="@string/menu_pengaturan" />
    </group>
</menu>