<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.toko.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/f_home" />

    <fragment
        android:id="@+id/nav_transaksi"
        android:name="com.example.toko.ui.transaksi.TransaksiFragment"
        android:label="@string/menu_transaksi"
        tools:layout="@layout/f_transaksi" />

    <fragment
        android:id="@+id/nav_riwayat"
        android:name="com.example.toko.ui.riwayat.RiwayatFragment"
        android:label="@string/menu_riwayat"
        tools:layout="@layout/f_riwayat" />

    <fragment
        android:id="@+id/nav_laporan"
        android:name="com.example.toko.ui.laporan.LaporanFragment"
        android:label="@string/menu_laporan"
        tools:layout="@layout/f_laporan" />

    <fragment
        android:id="@+id/nav_pengaturan"
        android:name="com.example.toko.ui.pengaturan.PengaturanFragment"
        android:label="@string/menu_pengaturan"
        tools:layout="@layout/f_pengaturan" />

</navigation>