<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    >



        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:layout_width="99dp"
            android:layout_height="92dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nimWid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NIM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="17"
                android:hint="@string/un"
                android:inputType="textPersonName"
                android:padding="14dp"
                android:textColor="#222222"
                android:textColorHint="#666666" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passWid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="32dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#444444">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="12"
                android:hint="@string/ps"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="#222222"
                android:textColorHint="#555555" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/LOGIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorPrimary"
            android:padding="14dp"
            android:text="@string/si"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />


</LinearLayout>
